--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,5 @@ pip-selfcheck.json
 .history
 
 # End of https://www.gitignore.io/api/osx,venv,macos,python,virtualenv,jetbrains+all,visualstudiocode
+
+data/
